--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ flexibility(document.documentElement);
 				<div class="ast-builder-menu-mobile ast-builder-menu ast-builder-menu-mobile-focus-item ast-builder-layout-element site-header-focus-item" data-section="section-header-mobile-menu">
 			<div class="ast-main-header-bar-alignment"><div class="main-header-bar-navigation"><nav class="site-navigation ast-flex-grow-1 navigation-accessibility site-header-focus-item" id="ast-mobile-site-navigation" aria-label="Site Navigation" itemtype="https://schema.org/SiteNavigationElement" itemscope="itemscope"><div class="main-navigation"><ul id="ast-hf-mobile-menu" class="main-header-menu ast-nav-menu ast-flex  submenu-with-border astra-menu-animation-fade  stack-on-mobile">
 <li id="menu-item-407" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-1259 current_page_item menu-item-407"><a href="https://21750657.github.io/task2/" aria-current="page" class="menu-link">Home</a></li>
-<li id="menu-item-409" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-409"><a href="https://21750657.github.io/task2/?page_id=228" class="menu-link">Contact</a></li>
+<li id="menu-item-409" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-409"><a href="https://21750657.github.io/task2/contact/" class="menu-link">Contact</a></li>
 </ul></div></nav></div></div>		</div>
 			</div>
 </div>
